# WebPilot

./: .env.default  .gitignore  Dockerfile  MANIFEST.in  README.md  TODO.md  default_browser_config.json  main.py  pyproject.toml  run.py  run.sh  setup.py  setup.sh
src/invisage/: config.py  logger.py
src/invisage/api/: app.py
src/invisage/api/routes/: __init__.py  browser.py
src/invisage/clients/: browser.py  controller.py  manager.py  page.py
src/invisage/clients/db/: __init__.py  mongo.py  tinydb.py
src/invisage/exc/: __init__.py
src/invisage/schemas/: pages.py  requests.py
src/invisage/schemas/constants/: cache.py  page_action_type.py  part_name.py  templates.py
src/invisage/utils/: cache_util.py  db.py  metrics.py  page_util.py  renderer.py  snapshot_util.py  ttl_cache.py
src/web_pilot/: config.py  logger.py
src/web_pilot/api/: app.py
src/web_pilot/api/routes/: __init__.py  browser.py  browser_pool.py  sessions.py
src/web_pilot/clients/: browser.py  browser_pool.py  controller.py  leased_browser.py  manager.py  page.py  page_session.py  pools_admin.py
src/web_pilot/exc/: __init__.py
src/web_pilot/schemas/: requests.py
src/web_pilot/user_data/: DevToolsActivePort
src/web_pilot/utils/: decorators.py  fake_ua.py  headless.py  limiter.py  metrics.py  page_session.py  page_util.py  renderer.py  sessions.py  snapshot_util.py  ttl_cache.py
src/web_weaver/: config.py
src/web_weaver/api/: app.py
src/web_weaver/clients/: browser.py  manager.py  resource_manager.py
src/web_weaver/exc/: __init__.py
src/web_weaver/schemas/: responses.py
(+10 files in other folders)
