[tool.black]
line-length = 100

[tool.poetry]
name = "👻 Invisage"
version = "0.1.0"
description = "Envision the Web, Invisibly"
authors = ["Amit Nakash"]
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12.2"
pytest = "7.4.2"
loguru = "0.6.0"
fastapi = "0.109.1"
black = "23.10.0"
pydantic = "1.10.6"
pyppeteer = "1.0.2"
python-dotenv = "1.0.0"
pytest-asyncio = "0.21.1"
pytest-mock = "3.12.0"
uvicorn = "0.23.2"
cachetools = "5.3.3"


[build-system]
requires = ["poetry-core"]
