[tool.poetry]
name = "WebPilot"
version = "0.1.0"
description = "Controlling the web - redefined"
authors = ["Amit Nakash"]
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.6.0"
fastapi = "^0.109.1"
black = "^24.3.0"
pyppeteer = "^1.0.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.2"
cachetools = "^5.3.3"
fake-useragent = "^1.5.1"
uvloop = "^0.21.0"
redis = "^5.2.0"
psutil = "^6.1.0"
nanoid = "^2.0.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"